fix: minor misalignment of text in breadcrumbs

--- a/less/header.less
+++ b/less/header.less
@@ -258,6 +258,8 @@
 	li {
 		max-width: 100%;
 		.text-ellipsis;
+		position: relative;
+		top: calc(16px / 4);
 	}
 
 	.fa {
@@ -267,6 +269,7 @@
 
 	font-size: 16px;
 	padding: 0;
+	padding-left: 0.5em;
 	background: none;
 
 	@media (max-width: @screen-xs-max) {
